update card school

--- a/get_school_all.html
+++ b/get_school_all.html
@@ -14,49 +14,20 @@
     </ul>
     <body>
             <h1 style="margin: 50px 50px;">โรงเรียน</h1>
-            <div class="row_school">
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 1</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
+            <div class="card_school">
+              
+                
+                <div><img id="school_photo" src="https://www.pandasecurity.com/en/mediacenter/src/uploads/2013/11/pandasecurity-facebook-photo-privacy.jpg">
+                    <p style="text-align: center; font-size: 24px; font-weight: bold; margin-top: 10px;">โรงเรียน</p>
+                    <p style="text-align: center; font-size: 14px; padding-bottom: 100px;">จังหวัดสงขลา</p>
                 </div>
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 2</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 3</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school" style="padding : 10px">
-                    <div class="card_school">
-                        <h3>Card 4</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school" style="padding : 10px">
-                    <div class="card_school">
-                        <h3>Card 5</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school" style="padding : 10px">
-                    <div class="card_school">
-                        <h3>Card 6</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
+                <div>A</div>
+                <div>A</div>
+                <div>A</div>
+                <div>A</div>
+                <div>A</div>
+                <div>A</div>
+                <div>A</div>
 
             </div>
 
@@ -92,8 +63,8 @@
 
     <footer>
 
-        <div class="row">
-            <div class="column">
+        <div class="row_footer">
+            <div class="column_footer">
                 <h2>ติดต่อเรา</h2>
                 <p class="footer_paragraph">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม</p>
                 <p class="footer_paragraph">มหาวิทยาลัยสงขลานครินทร์ อาคารศูนย์ทรัพยากรการเรียนรู้ อาคาร 1</p>
@@ -101,14 +72,15 @@
                 <p class="footer_paragraph">โทรศัพท์:0-7428-6972-7</p>
 
             </div>
-            <div class="column">
+            <div class="column_footer">
                 <h2>Social</h2>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม มหาวิทยาลัยสงขลานครินทร์</p>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม - OMS</p>
                 <p class="footer_paragraph2">คิดดี-คิดเป็น ประโยชน์ของเพื่อนมนุษย์เป็นกิจที่หนึ่ง</p>
             </div>
-            <div class="column">
-                <h2></h2>
+            <div class="column_footer">
+                <img src="public/NBTC.png"  width="170" height="150">
+                <img src="public/PSU_TH-Lanscap_OHSE.png"  width="280" height="70">  
             </div>
 
         </div>
