--- a/login.html
+++ b/login.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <meta th:name="_csrf" th:content="${_csrf.token}"/>
+        <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
+    </head>
     <link rel="stylesheet" href="css/default_template.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <header> 
@@ -8,23 +13,29 @@
     <body> 
             <div class="container">
                 <p class="loginheader">เข้าสู่ระบบ</p>
-                <form>
+                <form action="">
                 <center>
-                    <span class="material-icons" id="account">account_circle</span><input type="email" id="email" placeholder="อีเมล"><br>
+                    <span class="material-icons" id="account">account_circle</span><input name="" type="email" id="email" placeholder="อีเมล"><br>
                     <span class="material-icons" id="key">vpn_key</span><input type="password" id="pass" placeholder="รหัสผ่าน" ><br><br>
                     <input type="submit" value="เข้าสู่ระบบ">
                 </form>
                 <button class="btn facebook_button"><span class="material-icons" id="iconfacebook">facebook</span> เข้าสู่ระบบด้วย FACEBOOK</button>
                 <button class="btn google_button">เข้าสู่ระบบด้วย GOOGLE</button>
-                <br><p>หรือ <a href="www.google.com">ลืมรหัสผ่าน</a></p>
-                <p>ยังไม่มีบัญชีใช่หรือไม่? <a href="www.google.com>">ลงทะเบียน</a></p>
+                <br><p>หรือ <a href="https://www.google.co.th/">ลืมรหัสผ่าน</a></p>
+                <p>ยังไม่มีบัญชีใช่หรือไม่? <a href="https://www.google.co.th/>">ลงทะเบียน</a></p>
                 </center>
             </div>
     </body>
+
+
+
+
+
+
     <footer>
 
-        <div class="row">
-            <div class="column">
+        <div class="row_footer">
+            <div class="column_footer">
                 <h2>ติดต่อเรา</h2>
                 <p class="footer_paragraph">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม</p>
                 <p class="footer_paragraph">มหาวิทยาลัยสงขลานครินทร์ อาคารศูนย์ทรัพยากรการเรียนรู้ อาคาร 1</p>
@@ -32,14 +43,15 @@
                 <p class="footer_paragraph">โทรศัพท์:0-7428-6972-7</p>
 
             </div>
-            <div class="column">
+            <div class="column_footer">
                 <h2>Social</h2>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม มหาวิทยาลัยสงขลานครินทร์</p>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม - OMS</p>
                 <p class="footer_paragraph2">คิดดี-คิดเป็น ประโยชน์ของเพื่อนมนุษย์เป็นกิจที่หนึ่ง</p>
             </div>
-            <div class="column">
-                <h2></h2>
+            <div class="column_footer">
+                <img src="public/NBTC.png"  width="170" height="150">
+                <img src="public/PSU_TH-Lanscap_OHSE.png"  width="280" height="70">
             </div>
 
         </div>
