--- a/register.html
+++ b/register.html
@@ -34,10 +34,28 @@
                
             </div>
     </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
 
-        <div class="row">
-            <div class="column">
+        <div class="row_footer">
+            <div class="column_footer">
                 <h2>ติดต่อเรา</h2>
                 <p class="footer_paragraph">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม</p>
                 <p class="footer_paragraph">มหาวิทยาลัยสงขลานครินทร์ อาคารศูนย์ทรัพยากรการเรียนรู้ อาคาร 1</p>
@@ -45,14 +63,15 @@
                 <p class="footer_paragraph">โทรศัพท์:0-7428-6972-7</p>
 
             </div>
-            <div class="column">
+            <div class="column_footer">
                 <h2>Social</h2>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม มหาวิทยาลัยสงขลานครินทร์</p>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม - OMS</p>
                 <p class="footer_paragraph2">คิดดี-คิดเป็น ประโยชน์ของเพื่อนมนุษย์เป็นกิจที่หนึ่ง</p>
             </div>
-            <div class="column">
-                <h2></h2>
+            <div class="column_footer">
+                <img src="public/NBTC.png"  width="170" height="150">
+                <img src="public/PSU_TH-Lanscap_OHSE.png"  width="280" height="70">
             </div>
 
         </div>
