--- a/main_guest.html
+++ b/main_guest.html
@@ -14,30 +14,7 @@
     </ul>
     <body>
             <h1 style="margin: 50px 50px;">โรงเรียน</h1>
-            <div class="row_school">
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 1</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 2</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-                <div class="column_school">
-                    <div class="card_school">
-                        <h3>Card 3</h3>
-                        <p>Some text</p>
-                        <p>Some text</p>
-                  </div>
-                </div>
-
-            </div>
+            
 
                 
 
@@ -73,8 +50,8 @@
 
     <footer>
 
-        <div class="row">
-            <div class="column">
+        <div class="row_footer">
+            <div class="column_footer">
                 <h2>ติดต่อเรา</h2>
                 <p class="footer_paragraph">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม</p>
                 <p class="footer_paragraph">มหาวิทยาลัยสงขลานครินทร์ อาคารศูนย์ทรัพยากรการเรียนรู้ อาคาร 1</p>
@@ -82,14 +59,15 @@
                 <p class="footer_paragraph">โทรศัพท์:0-7428-6972-7</p>
 
             </div>
-            <div class="column">
+            <div class="column_footer">
                 <h2>Social</h2>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม มหาวิทยาลัยสงขลานครินทร์</p>
                 <p class="footer_paragraph2">สำนักพัฒนาทรัพยากรมนุษย์และพันธกิจสังคม - OMS</p>
                 <p class="footer_paragraph2">คิดดี-คิดเป็น ประโยชน์ของเพื่อนมนุษย์เป็นกิจที่หนึ่ง</p>
             </div>
-            <div class="column">
-                <h2></h2>
+            <div class="column_footer">
+                <img src="public/NBTC.png"  width="170" height="150">
+                <img src="public/PSU_TH-Lanscap_OHSE.png"  width="280" height="70">
             </div>
 
         </div>
